<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>staubli_val3_driver</name>
  <version>1.0.0</version>
  <description>The staubli_val3_driver package</description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="ivo.dekker@kuleuven.be">Ivo Dekker</maintainer>
  
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/staubli_val3_driver</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli_val3_driver/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli_val3_driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>industrial_robot_client</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>simple_message</depend>
  <depend>staubli_msgs</depend>
  <depend>rcpputils</depend>
  <depend>ros2launch</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
