<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_middleware</name>
  <version>1.0.0</version>
  <description>the robot_middleware package</description>
  <maintainer email="engin.karlidag@gmx.de">Engin Karlidag</maintainer>
  <maintainer email="ivo.dekker@kuleuven.be">Ivo Dekker</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>simple_message</depend>
  <depend>motion_control_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>control_toolbox</depend>
  <depend>control_msgs</depend>

  <depend>ros2launch</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
